syntax = "proto2";

package cnn;

message ArrayProto
{
    optional int32 n = 1;       // number of batches
    optional int32 c = 2;       // number of channels
    optional int32 h = 3;       // number of rows, i.e., height
    optional int32 w = 4;       // number of columns, i.e., width
    repeated double d = 5;      // data
}

message NetworkProto
{
    repeated LayerProto layer_proto = 1;
}

enum LayerType
{
    INPUT           = 0;        // input layer
    FULL_CONNECTED  = 1;        // full connected layer
    L2_LOSS         = 2;        // l2 loss layer, for regression only
}
message LayerProto
{
    optional string name = 1;       // can be arbitrary and may be not unique, for debug only
    optional LayerType type     = 2;
    repeated string bottom  = 3;    // bottom/top name are globally unique
    repeated string top = 4;        // bottom/top name are globally unique

    repeated ArrayProto param = 5;   // parameters for this layer

    optional InputLayerProto input_proto = 6;
    optional FullConnectedLayerProto fc_proto = 7;
}

message InputLayerProto
{
    optional int32 n = 1;
    optional int32 c = 2;
    optional int32 h = 3;
    optional int32 w = 4;
}

message FullConnectedLayerProto
{
    optional int32 num_output = 1;  // number of outputs
}
